--- a/moppy-client/MoppySim/build.xml
+++ b/moppy-client/MoppySim/build.xml
@@ -1,73 +1,84 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- You may freely edit this file. See commented blocks below for -->
-<!-- some examples of how to customize the build. -->
-<!-- (If you delete it and reopen the project it will be recreated.) -->
-<!-- By default, only the Clean and Build commands use this build script. -->
-<!-- Commands such as Run, Debug, and Test only use this build script if -->
-<!-- the Compile on Save feature is turned off for the project. -->
-<!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
-<!-- in the project's Project Properties dialog box.-->
-<project name="MoppySim" default="default" basedir=".">
-    <description>Builds, tests, and runs the project MoppySim.</description>
-    <import file="nbproject/build-impl.xml"/>
-    <!--
+<project name="MoppySim" default="dist" basedir=".">
+  <description>
+    MoppySim Client
+  </description>
 
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
+  <property name="src" location="src"/>
+  <property name="build" location="build"/>
+  <property name="dist" location="dist"/>
 
-      -pre-init:                 called before initialization of project properties
-      -post-init:                called after initialization of project properties
-      -pre-compile:              called before javac compilation
-      -post-compile:             called after javac compilation
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-jar:                  called before JAR building
-      -post-jar:                 called after JAR building
-      -post-clean:               called after cleaning build products
+  <property name="rxtxlib_dir" location="../SerialDrivers"/>
+  <property name="rxtxlib" location="${rxtxlib_dir}/nrjavaserial-3.9.3.jar"/>
 
-    (Targets beginning with '-' are not intended to be called on their own.)
+  <property name="jsynlib_dir" location="lib"/>
+  <property name="jsynlib" location="${jsynlib_dir}/jsyn_16_7_3.jar"/>
 
-    Example of inserting an obfuscator after compilation could look like this:
+  <target name="init">
+    <tstamp/>
+    <mkdir dir="${build}"/>
+  </target>
 
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
+  <target name="compile" depends="init" description="compile the source">
+    <javac
+		srcdir="${src}"
+		destdir="${build}"
+		target="1.8"
+	 	encoding="UTF-8"
+		source="1.8"
+		debug="none">
+      <classpath>
+         <pathelement location="${rxtxlib}"/>
+         <pathelement location="${jsynlib}"/>
+      </classpath>
+    </javac>
+  </target>
 
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
+  <target name="dist" depends="compile" description="generate the distribution">
+    <mkdir dir="${dist}/lib"/>
+   <copy todir="${build}/moppysim/ui" flatten="true">
+      <resources>
+        <file file="${src}/moppysim/ui/floppy_xs.png"/>
+      </resources>
+    </copy>
+	<jar jarfile="${dist}/lib/MoppySim-combined-${DSTAMP}.jar" basedir="${build}">
+		<zipfileset includes="**/*" src="${rxtxlib}"/>
+		<zipfileset includes="**/*" src="${jsynlib}"/>
+		<manifest>
+		  <attribute name="Main-Class" value="moppysim.ui.MainWindow"/>
+		</manifest>
+	</jar>
+  </target>
 
+  <target name="appimage" depends="dist" description="create appimage">
+	<copy todir="${dist}/appimage">
+    	<fileset dir="appimage"/>
+  	</copy>
+    <copy tofile="${dist}/appimage/MoppySim.png">
+      <resources>
+        <file file="${src}/moppysim/ui/floppy_xs.png"/>
+      </resources>
+    </copy>
+    <copy tofile="${dist}/appimage/MoppySim-combined.jar">
+      <resources>
+        <file file="${dist}/lib/MoppySim-combined-${DSTAMP}.jar"/>
+      </resources>
+    </copy>
+	<exec executable="chmod">
+		<arg value="+x"/>
+		<arg value="${dist}/appimage/AppRun"/>
+	</exec>
+	<exec executable="appimagetool">
+		<arg value="${dist}/appimage"/>
+		<arg value="${dist}/MoppySim-x86_64.AppImag"/>
+	</exec>
+  </target>
 
-    Another way to customize the build is by overriding existing main targets.
-    The targets of interest are: 
+  <target name="run" depends="dist">
+	  <java jar="${dist}/lib/MoppySim-combined-${DSTAMP}.jar" fork="true"/>
+  </target>
 
-      -init-macrodef-javac:     defines macro for javac compilation
-      -init-macrodef-junit:     defines macro for junit execution
-      -init-macrodef-debug:     defines macro for class debugging
-      -init-macrodef-java:      defines macro for class execution
-      -do-jar:                  JAR building
-      run:                      execution of project 
-      -javadoc-build:           Javadoc generation
-      test-report:              JUnit report generation
-
-    An example of overriding the target for project execution could look like this:
-
-        <target name="run" depends="MoppySim-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
-
-    Notice that the overridden target depends on the jar target and not only on 
-    the compile target as the regular run target does. Again, for a list of available 
-    properties which you can use, check the target you are overriding in the
-    nbproject/build-impl.xml file. 
-
-    -->
+  <target name="clean" description="clean up">
+    <delete dir="${build}"/>
+    <delete dir="${dist}"/>
+  </target>
 </project>
